{
    "name": "VRInputActions",
    "maps": [
        {
            "name": "VRHands",
            "id": "a5f83bb8-8aaf-4e87-a482-c9b4bfbef686",
            "actions": [
                {
                    "name": "LeftPrimaryButton",
                    "type": "Button",
                    "id": "a1f0a2a6-3b68-4fc2-9ef9-fc9deae938ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftSecondaryButton",
                    "type": "Button",
                    "id": "4f1d20b7-34b9-4053-9a6e-d7a5e5e86f17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMenuButton",
                    "type": "Button",
                    "id": "c1e5dd9e-cf1f-44b2-96bb-fd6c97ca326f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftGrip",
                    "type": "Value",
                    "id": "78e9c7b8-5207-42d8-867d-5ff6bde96fbc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "e76ec39f-0f60-4c5a-8e53-8e7d4b6368b8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftJoystick",
                    "type": "Value",
                    "id": "d1f41812-4c8a-4b14-8057-05d7c502f7c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightPrimaryButton",
                    "type": "Button",
                    "id": "f012c40f-4a9e-49d6-8ae3-2ab31f9d9a9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightSecondaryButton",
                    "type": "Button",
                    "id": "5c6b7a57-b9b0-45b2-919b-20a1910c783e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMenuButton",
                    "type": "Button",
                    "id": "601ea45b-953f-4221-9a5f-6c10ea8f92bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrip",
                    "type": "Value",
                    "id": "aa650f06-7f68-4748-9c7a-08a6b2db94ad",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "1a5d6b04-f6c7-4a56-980b-4ebf85878a7d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightJoystick",
                    "type": "Value",
                    "id": "41a7eb9e-4019-4e1a-b5d5-5b93db987e02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5bb67519-fd3b-41c1-8320-367e1321c6e2",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c392d2b-7f2a-4622-9873-6c22985b8b34",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba4a8a9e-7de5-4a7e-9f6b-d3bc91f519d8",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftMenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8a45c94-0e1e-4f32-a0c8-ecb45ed3be39",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44511f56-0d2e-4de7-a9bc-147adfdaea84",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b52ec9ec-457f-45d9-90bc-8fa1c7ae2ef7",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ab895d9-1368-4966-b1b9-132e2072a2c4",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3af22bde-e02a-4e94-9b4f-242f7b9124f1",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a39809ae-9f88-4f52-b4f4-2cfc2eea02a3",
                    "path": "<XRController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightMenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63b210a4-7b5d-4608-a847-b593b5a7d62d",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22f98e99-bb18-4a68-8f44-3ef54722d5f4",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3d0a417-206b-4c04-a00f-65a5366f0c34",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}